[gd_scene load_steps=19 format=3 uid="uid://cwceug6bl1wi5"]

[ext_resource type="Script" path="res://Scenes/Levels/menu.gd" id="1_7cc37"]
[ext_resource type="FontFile" uid="uid://ci60w53hdbiqe" path="res://Art/Fonts/m3x6.ttf" id="2_5i4ay"]
[ext_resource type="Texture2D" uid="uid://bmxoy6nowfok4" path="res://Art/Sprites/ending_frame_2.png" id="2_m5vv4"]
[ext_resource type="Texture2D" uid="uid://bl0pub8mmfjyq" path="res://Art/Sprites/ending_frame_1.png" id="3_oudmb"]
[ext_resource type="Texture2D" uid="uid://bxvtpkw4v6grt" path="res://Art/Sprites/SquareIcon.png" id="3_rapyd"]
[ext_resource type="Script" path="res://Scripts/Music.gd" id="4_s8bt4"]
[ext_resource type="Texture2D" uid="uid://d4kv2polppp1q" path="res://Art/Sprites/ending_frame_intermission.png" id="4_yqlhv"]
[ext_resource type="AudioStream" uid="uid://cuo0ag86spqhw" path="res://Art/Audio/UNIVERSFIELD_-_Space_Journey_Through_Nebulae_and_Galaxy.mp3" id="5_3afcn"]
[ext_resource type="Texture2D" uid="uid://cmjrnlrdkh7dg" path="res://Art/Sprites/Title.png" id="6_lr0lt"]
[ext_resource type="AudioStream" uid="uid://b6fh07g4vhmgc" path="res://Art/Audio/Effects/bubble.mp3" id="7_hyp0q"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xnnis"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m5vv4")
}, {
"duration": 1.0,
"texture": ExtResource("3_oudmb")
}, {
"duration": 1.0,
"texture": ExtResource("4_yqlhv")
}, {
"duration": 1.0,
"texture": ExtResource("4_yqlhv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_oyw1v"]
font = ExtResource("2_5i4ay")
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jrv37"]
font = ExtResource("2_5i4ay")
font_size = 32
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v1g5c"]

[sub_resource type="Animation" id="Animation_3bv1o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Music/Normal:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-12.842]
}

[sub_resource type="Animation" id="Animation_p0bji"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Music/Normal:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, -12.842]
}

[sub_resource type="Animation" id="Animation_23jw5"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Music/Normal:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-12.842, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtxbs"]
_data = {
"RESET": SubResource("Animation_3bv1o"),
"fade_in": SubResource("Animation_p0bji"),
"fade_out": SubResource("Animation_23jw5")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7cc37")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(320.5, 203.75)
scale = Vector2(0.373326, 0.42041)
sprite_frames = SubResource("SpriteFrames_xnnis")
autoplay = "default"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = 2
offset_right = 654.0
offset_bottom = 403.0
color = Color(0, 0, 0, 1)

[node name="Credits" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 322.0
offset_top = 20.0
offset_right = 643.0
offset_bottom = 389.0

[node name="Credits" type="ScrollContainer" parent="CanvasLayer/Credits"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -812.0
offset_top = -169.5
offset_right = -14.0
offset_bottom = 155.5
grow_horizontal = 0
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Credits/Credits"]
layout_mode = 2
size_flags_horizontal = 8
text = "Leadership legends is created by:
Brian Wang - Lead Programmer & GFX artist
Steven Mo - Sprite Artist
Thomas Zhao - Database writer, Storyline writer, Game Designer

Video game icon background:
Pixel Art Background from WikiMedia Commons
Licensed under CC BY-SA 4.0 DEED
https://creativecommons.org/licenses/by-sa/4.0/
https://commons.wikimedia.org/wiki/File:Pixel_Art_Background.jpg


Pixel Art Background from Cainos
Itch.io, free product
License requires no credit of author.
https://cainos.itch.io/pixel-art-top-down-basic

Some music from Clement.
\"Music by Clement Panchout www.clementpanchout.com\",
Licensed under Creative Commons Attribution 4.0 International (CC BY 4.0) 
https://clement-panchout.itch.io/yet-another-free-music-pack


Free Tiny Hero Sprites Pixel Art
No license available, free pixel art as stated under comments
https://free-game-assets.itch.io/free-tiny-hero-sprites-pixel-art

Fantasy RPG Music Pack
alkakrab04@gmail.com
(100% Copyrigt Free)
https://alkakrab.itch.io/fantasy-rpg-soundtrack-music

8-Bit Wii Shop Channel Music
Luciana Garcia
https://www.youtube.com/watch?v=N5AUwYEqTLA&t
No copyright intended, all rights reserved to Nintendo's music & Garcia's remix.

32x32 Clothes + snacks asset pack
Noiryt
Licened under CC-BY
https://creativecommons.org/licenses/by/4.0/#
Changes were made of recolorization of food sprites to be FBLA themed.


Dialogue Text Sound Effects
Alan Dalcastagne
https://alan-dalcastagne.itch.io/dialog-text-sound-effects
License:
non-exclusive license – you’re free to use these packs in your commercial games. No license to claim as your own work.


32x32 Tileset
SolaarNoble
Permissions:

\"Anyone can use these assets for personal and commercial use. You are 100% allowed to edit these however you want for your own use as well. Credit is not required but would be appreciated. \"


(FREE) Lively NPCs
chierit & Zeno
Licensed under 	Creative Commons Attribution v4.0 International
https://creativecommons.org/licenses/by/4.0/deed.en

Space Journey Through Nebulae and Galaxy
Universfield
Licensed under CC BY-SA
Source: Free Music Archive
"
label_settings = SubResource("LabelSettings_oyw1v")
horizontal_alignment = 2

[node name="Controls" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 407.0
offset_top = 74.0
offset_right = 636.0
offset_bottom = 353.0

[node name="Controls" type="Label" parent="CanvasLayer/Controls"]
layout_mode = 0
offset_left = 66.0
offset_top = 31.0
offset_right = 202.0
offset_bottom = 231.0
size_flags_horizontal = 8
text = "CONTROLS
WASD - movement
Space - dash
B - inventory
E - swap allies
Q - spawn allies
R - recall allies
"
label_settings = SubResource("LabelSettings_jrv37")
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -141.0
offset_right = 141.0
offset_bottom = -40.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_5i4ay")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_v1g5c")
text = "Start"
icon = ExtResource("3_rapyd")
alignment = 0

[node name="CreditsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_5i4ay")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_v1g5c")
text = "Credits"
icon = ExtResource("3_rapyd")
alignment = 0

[node name="Controls" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_5i4ay")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_v1g5c")
text = "Controls"
icon = ExtResource("3_rapyd")
alignment = 0

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_5i4ay")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_v1g5c")
text = "Quit"
icon = ExtResource("3_rapyd")
alignment = 0

[node name="Fader" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rtxbs")
}

[node name="Music" type="Node" parent="."]
script = ExtResource("4_s8bt4")

[node name="Normal" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("5_3afcn")
volume_db = -12.842
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(323, 51)
scale = Vector2(0.597037, 0.581317)
texture = ExtResource("6_lr0lt")

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_hyp0q")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="Fader" to="." method="_on_fader_animation_finished"]
[connection signal="finished" from="Music/Normal" to="Music" method="_on_normal_finished"]
